# 01_fractal_julia_Programacion_Paralela

./: CMakeLists.txt  bin2header.txt  explicacion.txt  fractal_serial.cpp  fractal_serial.h  main.cpp
